Fix horizontal scrolling on mobile bug

--- a/style.css
+++ b/style.css
@@ -322,6 +322,10 @@ footer {
 
 /* --------------- Mobile Response --------------- */
 @media only screen and (max-width: 1100px) {
+    html, body {
+        overflow-x: hidden;
+      }
+
     body {
         display: flex;
         flex-direction: column;
@@ -330,6 +334,7 @@ footer {
         align-items: center;
         margin: 0;
         padding: 0;
+        position: relative;
     }
 
     h1 {
